src/tests/snapshots/amber__tests__optimizing__unused_variables_loop.ab__bash-3.2.snap
---
source: src/tests/optimizing.rs
expression: output
---
a_0=10
while :
do
    if (( ${a_0} <= 0 )); then
        break
    fi
    echo "${a_0}"
    a_0="$(( ${a_0} - 1 ))"
done
